--- a/index.html
+++ b/index.html
@@ -103,11 +103,24 @@
             <h1>Projetos</h1>
         
             <div class="contents-projetos">
-                <img src="assets/images/background/alura.png" alt="" class="imagens-projetos">
-                <img src="assets/images/background/calculos.png" alt="" class="imagens-projetos">
-                <img src="assets/images/background/FullFrame (1).png" alt="" class="imagens-projetos">
-                <img src="assets/images/background/play-filme.png" alt="" class="imagens-projetos"">
+                <div class="projetos-contents">
+                    <img src="assets/images/background/alura.png" alt="" class="imagens-projetos">
+                    <!-- <p>Página Alura Plus</p> -->
+                </div>
+                <div class="projetos-contents">
+                    <img src="assets/images/background/calculos.png" alt="" class="imagens-projetos">
+                    <!-- <p>App Calculadora serviços</p> -->
+                </div>
+                <div class="projetos-contents">
+                    <img src="assets/images/background/FullFrame (1).png" alt="" class="imagens-projetos">
+                    <!-- <p>Plataforma Dev </p> -->
+                </div>
+                <div class="projetos-contents">
+                    <img src="assets/images/background/play-filme.png" alt="" class="imagens-projetos"">
+                    <!-- <p>Plataforma Filmes</p> -->
+                </div>
             </div>
+            <p><em>Os projetos acima estão em fases de Desenvolvimentos</em></p>
     </section>
     
     <!-- Seção de contato -->
