menu voltar ao topo add

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/css/mediaQuery.css">
 </head>
 <body>
+    <a id="voltar" href="#section-home">Voltar ao topo</a>
     <!-- Cabeçalho com navegação -->
     <header class="header-container">
         <nav class="nav-container">
@@ -31,7 +32,7 @@
     </header>
     
     <!-- Seção inicial -->
-    <section class="section-home">
+    <section id="section-home">
         <div class="infor-home-developer">
             <img src="assets/images/developer-img.png" class="image-developer" alt="">
             <h1>&lt; Flávio Monteiro &gt;</h1>
