novo projeto add

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
                     <img src="assets/images/background/play-filme.png" alt="" class="imagens-projetos"">
                     <!-- <p>Plataforma Filmes</p> -->
                 </div>
+                <div class="projetos-contents">
+                    <img src="assets/images/background/geradorNumbers.png" alt="" class="imagens-projetos"">
+                    <!-- <p>Plataforma Filmes</p> -->
+                </div>
             </div>
             <p><em>Os projetos acima estão em fases de Desenvolvimentos</em></p>
     </section>
