--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
                 <a href="#projetos">Projetos</a>
                 <a href="#contato">Contato</a>
             </div>
+            <div class="menu-hamburguer" id="menu-hamburguer">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </nav>
     </header>
+    
     
     <!-- Seção inicial -->
     <section id="section-home">
@@ -106,23 +112,23 @@
             <div class="contents-projetos">
                 <div class="projetos-contents">
                     <img src="assets/images/background/alura.png" alt="" class="imagens-projetos">
-                    <!-- <p>Página Alura Plus</p> -->
+                    <p>Página Alura Plus</p>
                 </div>
                 <div class="projetos-contents">
                     <img src="assets/images/background/calculos.png" alt="" class="imagens-projetos">
-                    <!-- <p>App Calculadora serviços</p> -->
+                    <p>App Calculadora serviços</p>
                 </div>
                 <div class="projetos-contents">
                     <img src="assets/images/background/FullFrame (1).png" alt="" class="imagens-projetos">
-                    <!-- <p>Plataforma Dev </p> -->
+                    <p>Plataforma Dev </p>
                 </div>
                 <div class="projetos-contents">
                     <img src="assets/images/background/play-filme.png" alt="" class="imagens-projetos"">
-                    <!-- <p>Plataforma Filmes</p> -->
+                    <p>Plataforma Filmes</p>
                 </div>
                 <div class="projetos-contents">
                     <img src="assets/images/background/geradorNumbers.png" alt="" class="imagens-projetos"">
-                    <!-- <p>Plataforma Filmes</p> -->
+                    <p>Gerador numeros mega sena</p>
                 </div>
             </div>
             <p><em>Os projetos acima estão em fases de Desenvolvimentos</em></p>
@@ -163,5 +169,6 @@
     <footer>
         <p>Desenvolvido por Flávio Monteiro &copy;</p>
     </footer>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
