--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <nav class="menu" id="menu">
         <span class="close-btn" onclick="toggleMenu()">×</span>
-        <a href="sobre.html">Sobre</a>
-        <a href="academico.html">Acadêmico</a>
-        <a href="projetos.html">Projetos</a>
-        <a href="contato.html">Contato</a>
+        <a href="#container-sobre-min">Sobre</a>
+        <a href="#academico-conteiner">Acadêmico</a>
+        <a href="#projetos">Projetos</a>
+        <a href="#contato">Contato</a>
     </nav>
 
     <!-- Seção inicial -->
