--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a id="voltar" href="#section-home">Voltar ao topo</a>
     <!-- Cabeçalho com navegação -->
     <div class="hamburger" onclick="toggleMenu()">☰</div>
-
+    <!-- navegação menu hamburguer -->
     <nav class="menu" id="menu">
         <span class="close-btn" onclick="toggleMenu()">×</span>
         <a href="#container-sobre-min">Sobre</a>
@@ -126,6 +126,7 @@
     <!-- Seção de educação -->
     <section id="academico-conteiner">
       <h1><span class="minha-educacao">Minha Educação</span></h1>
+      <hr>
       <div class="content">
         <div class="container-faculdade">
           <h1>Centro universitário</h1>
@@ -141,41 +142,45 @@
 
     <!-- Seção de projetos -->
     <section id="projetos">
+      <img width="70" class="rocket-astronaut" src="assets/images/background/astronaut-surreal-3840x2160-11564-removebg-preview (2).png" alt="">
       <h1>Projetos</h1>
-
+      <hr>
       <div class="contents-projetos">
         <div class="projetos-contents">
-          <a href="https://alura-plus-nine-ochre.vercel.app/" target="_blank" rel="noopener noreferrer">
-            <img src="assets/images/background/alura.png" alt=""  class="imagens-projetos"/>
+          <img src="assets/images/background/alura.png" alt=""  class="imagens-projetos"/>
+          <a class="acessar" href="https://alura-plus-nine-ochre.vercel.app/" target="_blank" rel="noopener noreferrer">
+            Acessar
         </a>
-
           <p>Página Alura Plus</p>
         </div>
         <div class="projetos-contents">
-          <a href="https://app-horas-tabalhistas.vercel.app/" target="_blank" rel="noopener noreferrer">
-            <img  src="assets/images/background/calculos.png"   alt="" class="imagens-projetos" />
-        </a>
+          <img  src="assets/images/background/calculos.png"   alt="" class="imagens-projetos" />
+          <a class="acessar" href="https://app-horas-tabalhistas.vercel.app/" target="_blank" rel="noopener noreferrer">
+            Acessar
+          </a>
           <p>App Calculadora serviços</p>
         </div>
 
         <div class="projetos-contents">
-          <a href="">
-            <img  src="assets/images/background/FullFrame (1).png" alt="" class="imagens-projetos"/>
+          <img  src="assets/images/background/FullFrame (1).png" alt="" class="imagens-projetos"/>
+          <a class="acessar" href="">
+            Em desenvolvimento
         </a>
           <p>Plataforma Dev</p>
         </div>
 
         <div class="projetos-contents">
-          <a href="https://play-filmes-sigma.vercel.app/" target="_blank" rel="noopener noreferrer">
-            <img src="assets/images/background/play-filme.png" alt="" class="imagens-projetos">
-        </a>
+          <img src="assets/images/background/play-filme.png" alt="imagem plataforma de filmes" class="imagens-projetos">
+          <a class="acessar" href="https://play-filmes-sigma.vercel.app/" target="_blank" rel="noopener noreferrer">
+            Acessar
+          </a>
               <p>Plataforma Filmes</p>
         </div>
 
         <div class="projetos-contents">
-          <a href="https://gerador-numbers.vercel.app/" target="_blank" rel="noopener noreferrer">
-              <img src="assets/images/background/geradorNumbers.png" alt="foto projeto"
-              class="imagens-projetos"">
+          <img src="assets/images/background/geradorNumbers.png" alt="imagem gerador de sorteios" class="imagens-projetos"">
+          <a class="acessar" href="https://gerador-numbers.vercel.app/" target="_blank" rel="noopener noreferrer">
+          Acessar
           </a>
           <p>Gerador numeros mega sena</p>
         </div>
