--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <!-- Seção inicial -->
     <section id="section-home">
+      <img class="img-astrounaut" src="assets/images/background/image04-Photoroom.png" alt="">
       <div class="infor-home-developer">
         <img
           src="assets/images/developer-img.png"
@@ -96,6 +97,7 @@
     <!-- Seção sobre mim -->
     <section id="container-sobre-min">
       <h1>Sobre mim</h1>
+      <hr>
       <div class="sobre-mim-descricao">
         <img
           width="250"
