--- a/index.html
+++ b/index.html
@@ -9,18 +9,12 @@
     <!-- Fontes externas Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"/>
+    <link  href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"   rel="stylesheet"/>
 
     <!-- Link para arquivos CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/mediaQuery.css" />
+    <link rel="stylesheet" href="assets/css/mediaquery.css" />
   </head>
   <body>
     <a id="voltar" href="#section-home">Voltar ao topo</a>
@@ -188,14 +182,14 @@
         </div>
         
       </div>
-      <p><em>Os projetos acima estão em fases de Desenvolvimentos</em></p>
+      <p><em>Alguns projetos acima estão em fases de Desenvolvimentos</em></p>
     </section>
 
     <!-- Seção de contato -->
     <section id="contato">
       <h1>Contato</h1>
       <!-- formulário -->
-      <form action="/submit-form" method="post">
+      <form action="http//www.g1.com.br" method="post">
         <fieldset>
           <legend>Informações Pessoais</legend>
           <div class="form-group">
