--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/mediaquery.css" />
   </head>
+
   <body>
     <a id="voltar" href="#section-home">Voltar ao topo</a>
     <!-- Cabeçalho com navegação -->
@@ -121,17 +122,43 @@
 
     <!-- Seção de educação -->
     <section id="academico-conteiner">
+      <img class="image-aducation" src="assets/images/background/graduation-cap.png" alt="">
       <h1><span class="minha-educacao">Minha Educação</span></h1>
       <hr>
       <div class="content">
         <div class="container-faculdade">
           <h1>Centro universitário</h1>
-          <p>UNINTER</p>
+          <p><strong>Uninter</strong></p>
           <p>Analise e Desenvolvimento de Sistemas - Cursando</p>
         </div>
         <div class="container-faculdade">
           <h1>2001 Colégio e Cursos</h1>
           <p>Ensino Médio</p>
+        </div>
+      </div>
+      <div class="interesse-area">
+        <h1>Tecnologias em aprendizado</h1>
+        <div class="images-tecnologias">
+          <div class="container-tecnologias java-c">
+            <img class="images-contents-tec java" src="assets/images/background/java-svgrepo-com.svg" alt="">
+            <p>Java</p>
+          </div>
+          <div class="container-tecnologias sql-p">
+            <img class="images-contents-tec sql" src="assets/images/background/database-svgrepo-com.svg" alt="">
+            <p>Sql</p>
+          </div>
+          <div class="container-tecnologias html-p">
+            <img class="images-contents-tec html" src="assets/images/background/html-16-svgrepo-com.svg" alt="">
+            <p>HTML</p>
+          </div>
+          <div class="container-tecnologias excel-p">
+            <img class="images-contents-tec excel" src="assets/images/background/excel-file-svgrepo-com.svg" alt="">
+            <p>Excel</p>
+          </div>
+          <div class="container-tecnologias powerbi-p">
+            <img class="images-contents-tec powerbi" src="assets/images/background/powerbi-svgrepo-com.svg" alt="">
+            <p>Power Bi</p>
+          </div>
         </div>
       </div>
     </section>
@@ -189,7 +216,7 @@
     <section id="contato">
       <h1>Contato</h1>
       <!-- formulário -->
-      <form action="http//www.g1.com.br" method="post">
+      <form action="#" method="post">
         <fieldset>
           <legend>Informações Pessoais</legend>
           <div class="form-group">
