tecnologia interassadas adicionadas

--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
             />
           </div>
           <div>
-            <img
-              src="assets/images/icons/whatsapp-svgrepo-com.svg"
-              class="icones whatsapp-icon-svg"
-              alt=""
-            />
+            <a href="https://wa.me/5582993182527?text=Ol%C3%A1,%20vi%20seu%20portif%C3%B3lio%20e%20gostaria%20de%20conversar" target="_blank" rel="noopener noreferrer">
+              <img
+                src="assets/images/icons/whatsapp-svgrepo-com.svg"
+                class="icones whatsapp-icon-svg"
+                alt=""
+              />
+            </a>
           </div>
           <div>
             <img
@@ -159,6 +161,12 @@
             <img class="images-contents-tec powerbi" src="assets/images/background/powerbi-svgrepo-com.svg" alt="">
             <p>Power Bi</p>
           </div>
+        </div>
+        <h1>Outros interesses</h1>
+        <div class="other-intersse">
+          <img class="images-contents-tec" src="assets/images/background/python-svgrepo-com.svg" alt="">
+          <img class="images-contents-tec" src="assets/images/background/react-svgrepo-com.svg" alt="">
+          <img class="images-contents-tec" src="assets/images/background/ui-ux.png" alt="">
         </div>
       </div>
     </section>
@@ -245,7 +253,12 @@
       </form>
     </section>
     <footer>
-      <p>Desenvolvido por Flávio Monteiro &copy;</p>
+      <ul>
+        <li>Contato (82) 9893182527</li>
+        <li>email flavio.ms@outlook.com.br</li>
+      </ul>
+      <p>Desenvolvido por Flávio Monteiro&copy;</p>
+      <p><em>Maceió Alagoas Brasil</em></p>
     </footer>
     <script src="assets/js/main.js"></script>
   </body>
